# hoshiilog

./: .gitignore  Dockerfile.worker  docker-compose.yaml  justfile
backend/: __init__.py  alembic.ini  justfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-04-20_create_user_table.py  2026-04-20_fix_timestamp_timezone.py  2026-04-20_fix_timestamp_timezone_default.py  2026-04-25_initial_setup.py  2026-04-26_add_friends_table.py  2026-04-26_add_unique_constraint_to_friends.py  2026-04-27_create_wish_model.py  2026-04-29_initial_migration.py  2026-05-03_add_properties_to_user_model.py  2026-05-03_make_pfp_nullable.py  2026-05-03_remove_name_default.py  2026-05-10_move_from_nullables_to_type_hints.py  2026-05-15_remove_redundant_reserved_status.py  2026-05-19_add_unique_constraint_for_title_and_.py  2026-05-20_add_events_model.py  2026-05-20_add_events_model2.py  2026-05-29_add_event_members_model.py
backend/app/: api.py  base.py  config.py  database.py  exceptions.py  logging.py  main.py  mixins.py
backend/app/auth/: dependencies.py  models.py  repositories.py  schemas.py  services.py  views.py
backend/app/events/: models.py  repositories.py  schemas.py  services.py  views.py
backend/app/infrastructure/: browser_pool.py  crawler_cache.py  redis.py
backend/app/presentation/: dependencies.py
backend/app/wishes/: models.py  repositories.py  schemas.py  services.py  views.py
backend/tests/: test_job_id.py  test_marketplace_detection.py  test_pubsub_roundtrip.py  test_wb_adapter.py  test_worker_job.py
(+33 files in other folders)
