[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.26.3",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "playwright>=1.55.0",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "rapidfuzz>=3.14.1",
    # Pinned <6 because arq depends on redis[hiredis]>=4.2.0,<6.
    "redis[hiredis]>=5.0.1,<6",
    "ruff>=0.15.10",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "fakeredis>=2.26.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
